--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,107 @@
-# Front-end Style Guide
 
-## Layout
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600&display=swap');
 
-The designs were created to the following widths:
+:root{
 
-- Mobile: 375px
-- Desktop: 1440px
+    /* COLORS  */
+    --white-clr: hsl(0, 0%, 100%);
+    --light-gray-clr: hsl(212, 45%, 89%);
+    --grayish-blue-clr: hsl(220, 15%, 55%);
+    --dark-blue-clr: hsl(218, 44%, 22%);
 
-## Colors
+    /* Typography */
+    --default-font: 'Outfit', sans-serif;
 
-- White: hsl(0, 0%, 100%)
-- Light gray: hsl(212, 45%, 89%)
-- Grayish blue: hsl(220, 15%, 55%)
-- Dark blue: hsl(218, 44%, 22%)
+    --h1-font-size: 22px;
+    --h2-font-size: 1rem;
+    --normal-font-size: 15px;
+    --small-font-size: 12px;
 
-## Typography
+    --font-w-normal: 400;
+    --font-w-medium: 600;
 
-### Body Copy
+}
 
-- Font size (paragraph): 15px
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+body{
+    font-family: var(--default-font);
+    font-size: var(--normal-font-size);
+    height: 100vh;
+    background-color: var(--light-gray-clr);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem 0 0 0;
+}
+img{
+    max-width: 100%;
+    height: auto;
+}
 
-### Font
+.card__container{
+    background-color: var(--white-clr);
+    max-width: 300px;
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: -1px 0px 4px rgba(0,0,0,.15);
+    overflow: hidden;
+    text-align: center;
+}
+.card__container img {
+    object-fit: cover;
+    border-radius: 10px;
+}
+.card__container .card__container-title{
+    font-size: var(--h1-font-size);
+    font-weight: var(--font-w-medium);
+    color: var(--dark-blue-clr);
+    margin: 15px 0;
+}
+.card__container .card__container-description{
+    font-size:  var(--normal-font-size);
+    font-weight: var(--font-w-normal);
+    color: var(--grayish-blue-clr);
+    margin-bottom: 20px;
+}
 
-- Family: [Outfit](https://fonts.google.com/specimen/Outfit)
-- Weights: 400, 700
+
+footer{
+    margin-top: 50px;
+}
+footer .attribution {
+font-size: 11px;
+text-align: center;
+}
+
+footer .attribution a {
+color: hsl(228, 45%, 44%);
+}
+
+/* Mobile: 375px */
+@media screen and (max-width: 375px) {
+    main {
+        margin-left: 1.5rem;
+        margin-right: 1.5rem;
+    }
+    .card__container{
+        max-width: 220px;
+        padding: 10px;
+    }
+    .card__container .card__container-title{
+        font-size: var(--h2-font-size);
+    }
+    .card__container .card__container-description{
+        font-size: var(--small-font-size);
+    }
+    footer .attribution {
+        display: flex;
+        flex-direction: column;
+    }
+}
